# mlops_fashion_mnist

./: ,gitignore  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
..bfg-report/2025-08-14/16-06-17/: cache-stats.txt  object-id-map.old-new.txt
..bfg-report/2025-08-14/16-06-19/: cache-stats.txt  object-id-map.old-new.txt
.github/workflows/: ci.yml
scripts/: eda.py
src/mlops_fmnist/: data.py  evaluate.py  model.py  train.py  utils.py
src/mlops_fmnist.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_data.py  test_model.py
